Added API and global configuration support for sinks, adding tables, and removing sinks, sources, and tables. Not yet tested.
