# sqml-core/src/main/java/ai/dataeng/sqml/config/server/ApiVerticle.java
@@ -1,8 +1,6 @@
 package ai.dataeng.sqml.config.server;
 
 import ai.dataeng.sqml.Environment;
-import ai.dataeng.sqml.ScriptDeployment;
-import ai.dataeng.sqml.config.util.StringNamedId;
 import com.google.common.base.Preconditions;
 import com.google.common.collect.ImmutableMap;
 import io.vertx.core.AbstractVerticle;
@@ -11,17 +9,12 @@ import io.vertx.core.Promise;
 import io.vertx.core.http.HttpHeaders;
 import io.vertx.core.http.HttpServer;
 import io.vertx.core.http.HttpServerOptions;
-import io.vertx.core.json.JsonArray;
 import io.vertx.core.json.JsonObject;
 import io.vertx.ext.web.Router;
 import io.vertx.ext.web.RoutingContext;
 import io.vertx.ext.web.openapi.RouterBuilder;
-import io.vertx.ext.web.validation.RequestParameters;
 
-import java.util.List;
 import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
@@ -50,6 +43,7 @@ public class ApiVerticle extends AbstractVerticle {
     @Override
     public void start(Promise<Void> startPromise) {
         SourceHandler sourceHandler = new SourceHandler(environment.getDatasetRegistry());
+        SinkHandler sinkHandler = new SinkHandler(environment.getDataSinkRegistry());
         DeploymentHandler deployHandler = new DeploymentHandler(environment);
         RouterBuilder.create(this.vertx, "datasqrl-openapi.yml")
                 .onSuccess(routerBuilder -> {
@@ -58,16 +52,22 @@ public class ApiVerticle extends AbstractVerticle {
                     routerBuilder.operation("getSources").handler(sourceHandler.get());
                     routerBuilder.operation("getSourceByName").handler(sourceHandler.getSourceByName());
                     routerBuilder.operation("deleteSource").handler(sourceHandler.deleteSource());
-//                    routerBuilder.operation("updateSourceTable").handler();
-//                    routerBuilder.operation("getSourceTables").handler();
-//                    routerBuilder.operation("getSourceTableByName").handler();
-//                    routerBuilder.operation("deleteSourceTable").handler();
-//                    routerBuilder.operation("getSourceTables").handler();
+                    routerBuilder.operation("addSourceTable").handler(sourceHandler.addTable());
+                    routerBuilder.operation("getSourceTables").handler(sourceHandler.getTables());
+                    routerBuilder.operation("getSourceTableByName").handler(sourceHandler.getTableByName());
+                    routerBuilder.operation("deleteSourceTable").handler(sourceHandler.deleteTable());
+
+                    // ### Sink Handlers
+                    routerBuilder.operation("addOrUpdateSink").handler(handleException(sinkHandler.update()));
+                    routerBuilder.operation("getSinks").handler(sinkHandler.get());
+                    routerBuilder.operation("getSinkByName").handler(sinkHandler.getSinkByName());
+                    routerBuilder.operation("deleteSink").handler(sinkHandler.deleteSink());
 
                     // #### Script Submission handlers
                     routerBuilder.operation("getDeployments").handler(deployHandler.getDeployments());
                     routerBuilder.operation("deployScript").handler(handleException(deployHandler.deploy()));
                     routerBuilder.operation("getDeploymentById").handler(deployHandler.getDeploymentById());
+                    routerBuilder.operation("compileScript").handler(deployHandler.compile());
 
                     Router router = routerBuilder.createRouter(); // <1>
                     //Generate generic error handlers
